--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,5 +26,7 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
+        with:
+          charts_repo_url: https://charts.kronicle.tech
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
