Set Kronicle App SERVER_SIDE_SERVICE_BASE_URL by default

--- a/charts/kronicle/expected-test-output/kronicle/templates/deployment.yaml
+++ b/charts/kronicle/expected-test-output/kronicle/templates/deployment.yaml
@@ -24,6 +24,8 @@ spec:
               value: "APP_TEST_VALUE_1"
             - name: "APP_TEST_ENV_2"
               value: "APP_TEST_VALUE_2"
+            - name: "SERVER_SIDE_SERVICE_BASE_URL"
+              value: "http://kronicle-service.svc.cluster.local"
             - name: "APP_TEST_SECRET_1"
               valueFrom:
                 secretKeyRef:
