--- a/charts/kronicle/values.yaml
+++ b/charts/kronicle/values.yaml
@@ -1,6 +1,5 @@
 app:
-  env:
-    SERVER_SIDE_SERVICE_BASE_URL: http://kronicle-service.svc.cluster.local
+  env: {}
   secrets: {}
 service:
   env: {}
